--- a/src/css/base/index.sass
+++ b/src/css/base/index.sass
@@ -15,6 +15,6 @@ html
 body
   background-color: $orange
   // background-image: url("../../img/ben")
-  color: $black
+  color: $white
   height: 100%
   margin: 0
