Basic car & track styles

--- a/src/css/modules/btn.sass
+++ b/src/css/modules/btn.sass
@@ -5,6 +5,7 @@
   border: none
   box-shadow: 4px 4px 0 $orange-dark
   color: $orange
+  cursor: pointer
   display: block
   line-height: 1.5
   outline: none
