--- a/src/css/modules/p.sass
+++ b/src/css/modules/p.sass
@@ -1,2 +1,10 @@
+@import "css/config/colors"
+
 .p
   margin: 0 0 10px
+
+  &.-min-margin
+    margin-bottom: 5px
+
+  &.-highlight
+    color: $yellow
